# netatalk-classic

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
config/: Makefile.am
contrib/a2boot/: Makefile.am  a2boot.c
contrib/macusers/: macusers.in
contrib/timelord/: timelord.c
distrib/initscripts/: .gitignore  Makefile.am  a2boot.service.tmpl  afpd.service.tmpl  atalkd.service.tmpl  cnid.service.tmpl  papd.service.tmpl  rc.atalk.bsd.tmpl  rc.atalk.debian.tmpl  rc.atalk.gentoo.tmpl  rc.atalk.suse-sysv.tmpl  rc.atalk.systemd.tmpl  rc.atalk.sysv.tmpl  rc.atalk.tru64.tmpl  rc.macipgw.netbsd.tmpl  service.atalk.systemd.tmpl  timelord.service.tmpl
doc/: README.AppleTalk
etc/: Makefile.am
etc/abridge/: README.md  toofar.c
etc/afpd/: Makefile.am  acls.c  afp_asp.c  afp_config.c  afp_options.c  appl.c  auth.c  auth.h  catsearch.c  desktop.c  desktop.h  dircache.c  directory.c  directory.h  enumerate.c  fce_api.c  file.c  file.h  filedir.c  fork.c  fork.h  hash.c  main.c  mangle.c  messages.c  nfsquota.c  ofork.c  quota.c  status.c  status.h  uam.c  unix.c  unix.h  volume.c  volume.h
etc/atalkd/: config.c  main.c  multicast.c  nbp.c  route.c  rtmp.c  rtmp.h  zip.c
etc/cnid_dbd/: Makefile.am  cmd_dbd_scanvol.c  comm.c  dbd_dbcheck.c  dbd_delete.c  dbd_get.c  dbd_getstamp.c  dbd_lookup.c  dbd_rebuild_add.c  dbd_resolve.c  dbd_search.c  dbd_update.c  dbif.c  main.c  pack.c
etc/macipgw/: .gitignore  Makefile.am  atp_input.c  macip.c  main.c  nbp_lkup_async.c  tunnel_bsd.c  tunnel_linux.c
etc/macipgw/rc.d/: macipgw
etc/papd/: auth.c  file.c  lp.c  magics.c  main.c  print_cups.c  queries.c  session.c  uam.c
etc/uams/: Makefile.am  uams_dhx2_pam.c  uams_dhx2_passwd.c  uams_dhx_pam.c  uams_dhx_passwd.c  uams_randnum.c
etc/uams/attic/: uams_dhx2_pam.c  uams_dhx2_passwd.c  uams_dhx_pam.c  uams_gss.c
include/atalk/: adouble.h  afp.h  asp.h  atp.h  compat.h  directory.h  dsi.h  nbp.h  rtmp.h  server_child.h  unicode.h  volume.h  zip.h
libatalk/: Makefile.am
libatalk/acl/: uuid.c
libatalk/adouble/: ad_open.c  ad_read.c  ad_sendfile.c  ad_write.c
libatalk/asp/: asp_getreq.c  asp_getsess.c  asp_shutdown.c  asp_write.c
libatalk/atp/: atp_internals.h  atp_open.c  atp_packet.c  atp_rreq.c  atp_rsel.c  atp_sreq.c  atp_sresp.c
libatalk/attic/tdb/: tdb.c
libatalk/bstring/: bstrlib.c
libatalk/cnid/: cnid_init.c
libatalk/cnid/attic/tdb/: cnid_tdb_add.c
libatalk/cnid/cdb/: cnid_cdb.h  cnid_cdb_private.h
libatalk/cnid/dbd/: cnid_dbd.c  cnid_dbd.h
libatalk/cnid/last/: cnid_last.c  cnid_last.h
libatalk/cnid/tdb/: cnid_tdb.h
libatalk/compat/: Makefile.am
libatalk/dsi/: dsi_opensess.c
libatalk/nbp/: nbp_lkup.c  nbp_rgstr.c  nbp_unrgstr.c  nbp_util.c
libatalk/netddp/: netddp_recvfrom.c  netddp_sendto.c
libatalk/unicode/: byteorder.h  charcnv.c  iconv.c  precompose.h  utf16_case.c  utf16_casetable.h  utf8.c  util_unistr.c
libatalk/unicode/charsets/: generic_cjk.c  generic_mb.c  mac_centraleurope.c  mac_chinese_simp.c  mac_chinese_trad.c  mac_cyrillic.c  mac_greek.c  mac_hebrew.c  mac_japanese.c  mac_korean.c  mac_roman.c  mac_turkish.c
libatalk/util/: Makefile.am  atalk_addr.c  cnid.c  server_ipc.c  socket.c  unix.c  volinfo.c
libatalk/vfs/: ea.c  ea_sys.c  sys_ea.c  unix.c  vfs.c
macros/: summary.m4  zeroconf.m4
man/man8/: .gitignore  Makefile.am  afpd.8.tmpl
sys/: Makefile.am
sys/netatalk/: endian.h  phase2.h
test/afpd/: Makefile.am
